Update about to add what I'm currently studying

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
           seu trabalho de forma mais prazerosa. Gosto de sempre aprender coisas novas e causar impacto positivo no
           processo.
         </p>
+        <p class='about-paragraph'>
+          Tenho estudado tecnologias de desenvolvimento web, com conhecimento de HTML, CSS, Javascript. Conheço Node.js,
+          React, e atualmente inscrito no programa TreinaDev da CampusCode para aprender melhores práticas de
+          desenvolvimento de software.
+        </p>
       </section>
 
       <section class='main-section work-experience'>
