--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             geograficamente
             separadas como se estivessem fisicamente no mesmo lugar. Esse novo serviço tanto gerou uma boa receita à
             empresa quanto
-            nos ajutou a usar o potencial de capacidade ociosa da rede do provedor.</li>
+            nos ajudou a usar o potencial de capacidade ociosa da rede do provedor.</li>
         </ul>
       </section>
       <section class='main-section educational-history'>
