update About me

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <main class='main'>
       <section class='personal-data'>
-        <h1 class='name'>Thiago Adomaitis</h1>
+        <h1 class='name'>Thiago Domingues Adomaitis</h1>
         <hr class='line' align='left'>
         <h2 class='title'>Profissional de tecnologia</h2>
       </section>
@@ -69,21 +69,18 @@
       <section class='main-section about-me'>
         <h3 class='section-title'>Sobre</h3>
         <p class='about-paragraph'>
-          Tenho experiência de trabalho com infraestrutura de redes, tendo atuado em Provedores de Internet. Fiz
-          configuração e implantação de equipamentos Mikrotik e Ubiquiti.
-          Usuário Linux e que preferencialmente busca utilizar Software Open Source, me sinto à vontade em trabalhar com
-          o
-          terminal.
-          Atualmente em busca de aprofundar os conhecimento no mundo Linux, servers, cloud, e programação.
-          Tenho predileção por resolver problemas e ajudar pessoas a superar obstáculos técnicos para que possam
-          realizar
-          seu trabalho de forma mais prazerosa. Gosto de sempre aprender coisas novas e causar impacto positivo no
-          processo.
+          Meu nome é Thiago Domingues Adomaitis, tenho 29 anos e moro em Leme, no interior de São Paulo.
+          Sou formado em Ciência da Computação pela Universidade Anhanguera. Atualmente trabalho como escrevente técnico
+          judiciário no Tribunal de Justiça de São Paulo. Depois da experiência no ramo de provedores de Internet, entrei 
+          no serviço público para ter a experiência, visto estar, à época, em dúvidas sobre a minha escolha. Entretanto, 
+          trabalhando como escrevente técnico judiciário, percebi que a área de tecnologia era mais propensa a me proporcionar 
+          fazer coisas que eu gostaria de fazer. Por isso, decidi me tornar um desenvolvedor, para aprender e ensinar coisas novas,
+          resolver problemas, me sentir parte de projetos nos quais eu veja significado tanto em seu fim quanto em 
+          sua execução. 
         </p>
         <p class='about-paragraph'>
-          Tenho estudado tecnologias de desenvolvimento web, com conhecimento de HTML, CSS, Javascript. Conheço Node.js,
-          React, e atualmente inscrito no programa TreinaDev da CampusCode para aprender melhores práticas de
-          desenvolvimento de software.
+          Tenho estudado tecnologias de desenvolvimento web, com conhecimento de HTML, CSS, Javascript, Node.js e 
+          React.
         </p>
       </section>
 
